fixed layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ section {
       padding-bottom: 10px;
       white-space: no-wrap;
       letter-spacing: 2px;
-      width: 77px;
+      width: 82px;
       animation: type 1.5s steps(5, end);
       -webkit-animation: type 1.5s steps(5, end);
       -moz-animation: type 1.5s steps(5, end);
@@ -572,28 +572,22 @@ header nav {
       width: 50%;
       min-width: 150px;
       margin: 5px auto; }
-  section {
-    padding-top: calc(40vh - 50px); }
-    section .content {
-      height: 30%; }
-      section .content h2 {
-        width: 82px; }
-  #gallery {
-    width: unset; }
-    #gallery .wrapper {
-      width: 90%; }
-    #gallery .gallery-header h1 {
-      margin-top: 15px;
-      font-size: 30px; }
-    #gallery .gallery-header h2 {
-      font-size: 16px;
-      font-family: RevReg, serif; }
-    #gallery .row {
-      padding: 80px 0;
-      flex-wrap: wrap; }
-      #gallery .row .column {
-        width: 100%;
-        padding: 0; }
+  #enter h2#enter-text {
+    width: 85px; }
+  #gallery .gallery-header h1 {
+    margin-top: 15px;
+    font-size: 40px; }
+  #gallery .gallery-header h2 {
+    font-size: 16px;
+    font-family: RevReg, serif; }
+  #gallery .row {
+    padding: 80px 20px 20px;
+    flex-wrap: wrap; }
+    #gallery .row .column {
+      width: 100%;
+      padding: 0; }
+      #gallery .row .column img {
+        margin-bottom: 12px; }
   #modal .text h3 {
     font-size: 28px;
     left: 50%;
